linkerd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: web-middleware
  namespace: linkerd-viz
spec:
  headers:
    customRequestHeaders:
      Host: web.linkerd-viz.svc.cluster.local
      Origin: ""
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: web-l5d-header-middleware
  namespace: linkerd-viz
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "web.linkerd-viz.svc.cluster.local:8084"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: linkerd-viz
spec:
  routes:
  - kind: Rule
    match: Host(`mesh.jimmyau.cloud`)
    middlewares:
    - name: web-middleware
    - name: web-l5d-header-middleware
    services:
    - name: web
      port: 8084
