linkerd/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: web-middleware
  namespace: linkerd-viz
spec:
  headers:
    customRequestHeaders:
      Host: web.linkerd-viz.svc.cluster.local
      Origin: ""
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: linkerd-viz
spec:
  routes:
  - kind: Rule
    match: Host(`linkerd.jimmyau.cloud`)
    middlewares:
    - name: web-middleware
    services:
    - name: web
      port: 8084
